Formularios validados con jquery-validation

--- a/proyecto-angular/angular.json
+++ b/proyecto-angular/angular.json
@@ -31,7 +31,8 @@
               "src/styles/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jquery-validation/dist/jquery.validate.min.js"
             ]
           },
           "configurations": {
