--- a/proyecto-angular/tsconfig.app.json
+++ b/proyecto-angular/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "jquery",
+      "jquery.validation"
+    ]
   },
   "files": [
     "src/main.ts",
